2.0.5
 * Allow 'YYYY' format LocalDate
 * Add metrics for write batch Size (SPARKC-501)
 * Type Converters for java.time.localdate (SPARKC-495)

2.0.4
 * Includes partches up to 1.6.9
 * Retry PoolBusy Exceptions, Throttle JWCT Calls (SPARKC-503) 

2.0.3
 * Includes patches up to 1.6.8

2.0.2
 * Protect against Size Estimate Overflows (SPARKC-492)
 * Add java.time classes support to converters and sparkSQL(SPARKC-491)
 * Allow Writes to Static Columnns and Partition Keys (SPARKC-470)

2.0.1
 * Refactor Custom Scan Method (SPARKC-481)

2.0.0
 * Upgrade driver version for 2.0.0 Release to 3.1.4 (SPARKC-474)
 * Extend SPARKC-383 to All Row Readers (SPARKC-473)

2.0.0 RC1
 * Includes all patches up to 1.6.5
 * Automatic adjustment of Max Connections (SPARKC-471)
 * Allow for Custom Table Scan Method (SPARKC-459)
 * Enable PerPartitionLimit (SPARKC-446)
 * Support client certificate authentication for two-way SSL Encryption (SPARKC-359)
 * Change Config Generation for Cassandra Runners (SPARKC-424)
 * Remove deprecated QueryRetryDelay parameter (SPARKC-423)
 * User ConnectionHostParam.default as default hosts String
 * Update usages of deprecated SQLContext so that SparkSession is used instead (SPARKC-400)
 * Test Reused Exchange SPARK-17673 (SPARKC-429)
 * Module refactoring (SPARKC-398)
 * Recognition of Java Driver Annotated Classes (SPARKC-427)
 * RDD.deleteFromCassandra (SPARKC-349)
 * Coalesce Pushdown to Cassandra (SPARKC-161)
 * Custom Conf options in Custom Pushdowns (SPARKC-435)
 * Upgrade CommonBeatUtils to 1.9.3 to Avoid SID-760 (SPARKC-457)

2.0.0 M3
 * Includes all patches up to 1.6.2

2.0.0 M2
 * Includes all patches up to 1.6.1

2.0.0 M1
 * Added support for left outer joins with C* table (SPARKC-181)
 * Removed CassandraSqlContext and underscore based options (SPARKC-399)
 * Upgrade to Spark 2.0.0-preview (SPARKC-396)
    - Removed Twitter demo because there is no spark-streaming-twitter package available anymore