@@ -132,12 +132,12 @@ class PredicatePushDownSpec extends FlatSpec with Matchers {
     ppd.predicatesToPreserve shouldBe empty
   }
 
-  it should "not push down an IN partition key predicate on the non-last partition key column" in {
+  it should "push down an IN partition key predicate on the non-last or any partition key column" in {
     val f1 = InFilter("pk1")
     val f2 = EqFilter("pk2")
     val ppd = new BasicCassandraPredicatePushDown(Set[Filter](f1, f2), table)
-    ppd.predicatesToPushDown shouldBe empty
-    ppd.predicatesToPreserve should contain allOf(f1, f2)
+    ppd.predicatesToPushDown should contain allOf(f1, f2)
+    ppd.predicatesToPreserve shouldBe empty
   }
 
   it should "push down the first clustering column predicate" in {
@@ -203,13 +203,13 @@ class PredicatePushDownSpec extends FlatSpec with Matchers {
     ppd.predicatesToPreserve should contain only f3
   }
 
-  it should "not push down IN restriction on non-last column" in {
+  it should "push down IN restriction on non-last or any column" in {
     val f1 = EqFilter("c1")
     val f2 = InFilter("c2")
     val f3 = EqFilter("c3")
     val ppd = new BasicCassandraPredicatePushDown(Set[Filter](f1, f2, f3), table)
-    ppd.predicatesToPushDown should contain only f1
-    ppd.predicatesToPreserve should contain only (f2, f3)
+    ppd.predicatesToPushDown should contain allOf(f1, f2, f3)
+    ppd.predicatesToPreserve shouldBe empty
   }
 
   it should "not push down any clustering column predicates, if the first clustering column is missing" in {
